@@ -60,6 +60,8 @@ Version 1.5.1+svn:
      python 2.4+. This change is fully backward compatible for scripts which properly
      treat the return value as a boolean.
    * Initial wail directory checkin. It's only a teaser at this point. ;)
+        * bruteforce_wail.py has been added - showing how easy it is to move a
+	well writen bot from the wesnoth module to the wail module.
 
 Version 1.5.1:
  * campaigns:
